# ChangeLog for app-text/build-docbook-catalog
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-text/build-docbook-catalog/ChangeLog,v 1.28 2011/03/29 02:17:56 flameeyes Exp $

*build-docbook-catalog-1.6 (29 Mar 2011)

  29 Mar 2011; Diego E. Pettenò <flameeyes@gentoo.org>
  build-docbook-catalog-1.4.ebuild, -build-docbook-catalog-1.5.ebuild,
  +build-docbook-catalog-1.6.ebuild:
  Version bump to handle bug #290680. Fix up SRC_URI/HOMEPAGE for old version.

*build-docbook-catalog-1.5 (23 Aug 2009)

  23 Aug 2009; Diego E. Pettenò <flameeyes@gentoo.org>
  -build-docbook-catalog-1.2.ebuild, +build-docbook-catalog-1.5.ebuild:
  Remove old version and add a new version to close bug #194485.

  08 Jul 2009; Samuli Suominen <ssuominen@gentoo.org>
  build-docbook-catalog-1.2.ebuild, build-docbook-catalog-1.4.ebuild:
  keepdir /etc/xml to avoid stage building issues wrt #277092

  08 Jul 2009; Samuli Suominen <ssuominen@gentoo.org>
  build-docbook-catalog-1.2.ebuild, build-docbook-catalog-1.4.ebuild:
  build-docbook-catalog needs getopt wrt #277092

  24 Nov 2008; Brent Baude <ranger@gentoo.org>
  build-docbook-catalog-1.4.ebuild:
  Marking build-docbook-catalog-1.4 ppc64 for bug 246090

  15 Nov 2008; Raúl Porcel <armin76@gentoo.org>
  build-docbook-catalog-1.4.ebuild:
  alpha/arm/ia64 stable wrt #246090

  12 Nov 2008; Jeroen Roovers <jer@gentoo.org>
  build-docbook-catalog-1.4.ebuild:
  Stable for HPPA (bug #246090).

  09 Nov 2008; nixnut <nixnut@gentoo.org> build-docbook-catalog-1.4.ebuild:
  Stable on ppc wrt bug 246090

  09 Nov 2008; Markus Meier <maekke@gentoo.org>
  build-docbook-catalog-1.4.ebuild:
  amd64/x86 stable, bug #246090

  08 Nov 2008; Ferris McCormick <fmccor@gentoo.org>
  build-docbook-catalog-1.4.ebuild:
  Sparc stable, required for Bug #246090.

*build-docbook-catalog-1.4 (22 Sep 2008)

  22 Sep 2008; Diego Pettenò <flameeyes@gentoo.org>