@@ -3,16 +3,18 @@ Hash: SHA1
 
 AUX build-docbook-catalog-1.4-prefix.patch 1726 RMD160 cab4d4bc19a97a346b50c1795b3ef909587fdbce SHA1 cde32eaa02e0ea4c6fc3dbceeeea67ed410b9646 SHA256 cf108efbccff7079cf5164d014043c5bebcd17abfa5b80d4b9bfdf44c7dbd16a
 AUX build-docbook-catalog-1.6-prefix.patch 1752 RMD160 feeed1dc42d2bb4c08a8bfb8ac79082a70c72f7b SHA1 1a28eead04adecb4cee38b656b70431865e4471a SHA256 adffaf33aa29eb2c978e8fac5037fc13502f9784e674d0f7ae379aa6d31202b0
+DIST build-docbook-catalog-1.19.tar.xz 4340 RMD160 a844b42ea1be2069962c0f1f56740fea5973ee34 SHA1 bbd4750a08650337c91646afa92ebc5818b041be SHA256 7d0dcdc70ad128b2ccb6c89466a6af9eeb4f6e1096071ae12749e465dfd92c94
 DIST build-docbook-catalog-1.4.bz2 3051 RMD160 5b55e774db345052aab32d9d49a44f01e16d1cbe SHA1 30e7a5e08982b485479332794f2e20b27d102e8a SHA256 ce0e9d5c988d165171ef1fde5e2de019c433af22d71db512e206356f3f0c149d
 DIST build-docbook-catalog-1.6.bz2 3185 RMD160 ed3fc359cec92d89c88606b61112a613cc1c4c0a SHA1 9b303cff14efbbd4579f2e881522092d48f72721 SHA256 0eb9ec3566845e2b0cd6c147d6072a3af44ac7fe92d007035deab0076a285c86
+EBUILD build-docbook-catalog-1.19.ebuild 984 RMD160 34106827badb356861e298cbe4a0cc94a94126b2 SHA1 463124ba2e6f492767d5eaf8b3b3d94b72396679 SHA256 e990c1d4ea2988ec14d4bd084eb05491570b0c9072afeee96e181eb53f0dc53e
 EBUILD build-docbook-catalog-1.4-r00.1.ebuild 935 RMD160 b8fcf9436ccdfca6bacc96bcf6dd4612f7ecda27 SHA1 212cf39a9abcd72f92b63500ec59d5e7b197335f SHA256 bc487d078ee87a2ade209418f72d2addd7df1d723b0a2f59c70b3b5308a8969f
 EBUILD build-docbook-catalog-1.6.ebuild 946 RMD160 bedc369e3b45a64748357dab78234858793c93c2 SHA1 ecf60926509c4db86f1533dc3e48d9d736abf65e SHA256 65c586ae1bbd272dbb5c7ba6099afefcbb4dc3cc0318db020ada0bff59431bb7
-MISC ChangeLog 4209 RMD160 be50a6c6094e97dfc1b491165e6be9dc802c7e7c SHA1 cd1cb3f233a48c426e7c408621f2bab7afe1dfcb SHA256 a4115e0b5c1618663783c81663a9d4ac652d7c2b0a4179de710391d7aa2ba597
+MISC ChangeLog 4468 RMD160 67074b0c407f9394332cbea2ea04071fa2461efe SHA1 6c94402fbe9ebf73b25d99c2f5d8d73bb906e849 SHA256 654c679317ca8391de38ff173fdb7a8970cef84584580334bac6fe6346a9ba73
 MISC metadata.xml 158 RMD160 0fc16223dcbd339480eed430d578705bd4494110 SHA1 03fe26d14d8f89333c04b9dc50f3045405b3e671 SHA256 a04e9a52e3c14409179292db0b287f4c54db24012b8321e0c2cf39fda4965aef
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.17 (SunOS)
+Version: GnuPG v2.0.19 (SunOS)
 
-iEYEARECAAYFAk3vlOkACgkQX3X2B8XHTomu8QCgl3syQh5k392Zab4zZ22Pd1Qh
-5okAn1NF1dIpi76Pb7OhMLW6dPz1fh8B
-=0syG
+iEYEARECAAYFAk+2JBkACgkQX3X2B8XHTonsUQCfYY4HOaPgxHDqlZ/9qKR2OX4o
+6t4AoKPEEe0R1UWLajbPVNNF59VxvVy/
+=V+nb
 -----END PGP SIGNATURE-----
