@@ -1,6 +1,16 @@
 # ChangeLog for app-text/build-docbook-catalog
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/build-docbook-catalog/ChangeLog,v 1.28 2011/03/29 02:17:56 flameeyes Exp $
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-text/build-docbook-catalog/ChangeLog,v 1.30 2012/04/26 17:20:54 aballier Exp $
+
+  26 Apr 2012; Alexis Ballier <aballier@gentoo.org>
+  build-docbook-catalog-1.19.ebuild:
+  keyword ~amd64-fbsd
+
+*build-docbook-catalog-1.19 (28 Mar 2012)
+
+  28 Mar 2012; Mike Frysinger <vapier@gentoo.org>
+  +build-docbook-catalog-1.19.ebuild:
+  Version bump.
 
 *build-docbook-catalog-1.6 (29 Mar 2011)
 
